# MassMash

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  LICENSE  PROJECT_STATUS.md  README.md  app.json  deep_test.py  package-lock.json  package.json  start.bat  start.sh  tailwind.config.js
.github/workflows/: ci.yml  e2e.yml
app/: _layout.tsx  index.tsx  paywall.tsx
app/(auth)/: _layout.tsx  login.tsx
app/(tabs)/: _layout.tsx  analytics.tsx  coach.tsx  dashboard.tsx  settings.tsx
app/onboarding/: _layout.tsx  goals.tsx  profile.tsx  schedule.tsx
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/file_handling/: __init__.py  parser.py
backend/app/llm/: __init__.py  anthropic_provider.py  base.py  dummy.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  files.py  ollama.py  settings.py  tools.py
backend/app/tools/: __init__.py  base.py  code_execution.py  file_tools.py  registry.py  web_search.py
backend/tests/: test_api.py  test_file_parser.py  test_llm_client.py  test_ollama.py  test_tools.py
eduai-companion/: .env.template  README.md  docker-compose.yml
eduai-companion/eduai-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  fly.toml  koyeb.yaml  pyproject.toml  railway.json  railway.toml
eduai-companion/eduai-backend/alembic/: env.py
eduai-companion/eduai-backend/alembic/versions/: 45f0d0797734_initial_schema.py
eduai-companion/eduai-backend/app/: main.py
eduai-companion/eduai-backend/app/core/: auth.py  bundesland.py  clerk.py  config.py  database.py  migrate_postgres.py  monitoring.py  postgres_redis.py  security.py  tier_guard.py
eduai-companion/eduai-backend/app/models/: schemas.py
eduai-companion/eduai-backend/app/routes/: abitur.py  adaptive.py  admin.py  audio.py  auth.py  battle_pass.py  calendar.py  challenges.py  chat.py  confidence.py  erklaerung.py  events.py  flashcards.py  gamification.py  groups.py  intelligence.py  iq_test.py  learning.py  legal.py  marketplace.py  matching.py  memory.py  multiplayer.py  notes.py  notifications.py  ocr.py  parents.py  password_reset.py  pdf_export.py  pomodoro.py  quests.py  quiz.py  rag.py  referral.py  research.py  school.py  schulbuch.py  shop.py  stats.py  stripe_routes.py  (+4 more)
eduai-companion/eduai-backend/app/services/: ai_engine.py  deep_crawler.py  email_service.py  ghost_founder.py  groq_llm.py  internet_ki.py  ki_intelligence.py  ki_personalities.py  knowledge_updater.py  latein_modus.py  model_router.py  ocr_solver.py  prompt_optimizer.py  quiz_topics.py  rag_service.py  scheduler.py  seed_curriculum.py  self_improvement.py  subjects.py
eduai-companion/eduai-backend/scripts/: setup_fly.sh  supabase_setup.py
eduai-companion/eduai-backend/tests/: conftest.py  test_admin.py  test_auth.py  test_chat.py  test_ocr.py
eduai-companion/eduai-frontend/: .env  .env.example  Dockerfile  MOBILE_RELEASE.md  capacitor.config.ts  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
eduai-companion/eduai-landing/: index.html
electron/: main.js  package.json  preload.js  splash.html
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/components/: AddHabitModal.tsx  BlurredProSection.tsx  ChatBubble.tsx  HPBar.tsx  LifeScoreRing.tsx  LoadingScreen.tsx  ProBadge.tsx  QuestCard.tsx  StreakBadge.tsx  XPBar.tsx  XPToast.tsx
src/constants/: config.ts  theme.ts
src/hooks/: useHaptics.ts  useProGate.ts
src/lib/: supabase.ts
src/stores/: authStore.ts  chatStore.ts  habitStore.ts  (+1 more)
supabase/: schema.sql
(+128 files in other folders)
