[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
fastapi = {extras = ["standard"], version = "^0.134.0"}
psycopg = {extras = ["binary"], version = "^3.3.3"}
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.22"
pydantic-settings = "^2.13.1"
aiosqlite = "^0.22.1"
python-dotenv = "^1.2.1"
bcrypt = "4.0.1"
groq = "^1.0.0"
faiss-cpu = "^1.13.2"
sentence-transformers = "^5.2.3"
pytesseract = "^0.3.13"
pillow = "^12.1.1"
sympy = "^1.14.0"
stripe = "^14.4.0"
httpx = "^0.28.1"
tavily-python = "^0.7.22"
gtts = "^2.5.0"
pywebpush = "^2.0.0"
py-vapid = "^1.9.0"
apscheduler = "^3.10.0"
pytz = ">=2024.1"
slowapi = "^0.1.9"
reportlab = "^4.1.0"
redis = "^5.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
resend = "^0.7.0"
websockets = "^12.0"
aiofiles = "^23.0.0"
posthog = "^3.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
